--- a/src/experiments/connection_test.ipynb
+++ b/src/experiments/connection_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,15 +17,17 @@
     "\n",
     "import pynetlogo\n",
     "\n",
-    "netlogo = pynetlogo.NetLogoLink(gui=True, jvm_path='/Library/Java/JavaVirtualMachines/jdk-22.jdk/Contents/MacOS/libjli.dylib', netlogo_home='/Users/takacstamas/NetLogo')\n",
-    "netlogo.load_model('/Users/takacstamas/NetLogo/models/Sample Models/Biology/Wolf Sheep Predation.nlogo')\n",
+    "#netlogo = pynetlogo.NetLogoLink(gui=True, jvm_path='/Library/Java/JavaVirtualMachines/jdk-22.jdk/Contents/MacOS/libjli.dylib', netlogo_home='/Users/takacstamas/NetLogo')\n",
+    "#netlogo.load_model('/Users/takacstamas/NetLogo/models/Sample Models/Biology/Wolf Sheep Predation.nlogo')\n",
+    "netlogo = pynetlogo.NetLogoLink(gui=True, jvm_path='/usr/lib/jvm/java-21-openjdk-amd64/lib/server/libjvm.so', netlogo_home='/usr/src/netlogo')\n",
+    "netlogo.load_model('/usr/src/netlogo/models/Sample Models/Biology/Wolf Sheep Predation.nlogo')\n",
     "\n",
     "netlogo.command(\"setup\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +100,7 @@
        "4    4 -22.666667 -22.666667"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +432,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.1.-1"
   }
  },
  "nbformat": 4,
